--- a/ReadTemp_06/www/temperature2.html
+++ b/ReadTemp_06/www/temperature2.html
@@ -21,11 +21,30 @@
             </div>
 
             <div class="content">
-                <header><span id="content">Waiting for Arduino...</span>°C</header>
+                <header><span id="content">Loading...</span>°C</header>
             </div>
         </section>
-
         <section id="stats" class="full-window">
+                <div class="box">
+                    <div class="text">
+                        <header id ="timestamp">Loading...</header><span class = "label">Last Transmission</span>
+                    </div>
+                </div><!-- 
+             --><div class="box">
+                    <div class="text">
+                        <header>n/a</header><span class = "label">Total Samples</span>
+                    </div>
+                </div><!--
+             --><div class="box">
+                    <div class="text">
+                        <header>n/a</header><span class = "label">Transmission Percentage</span>
+                    </div>
+                </div><!--
+             --><div class="box">
+                    <div class="text">
+                        <header>n/a</header><span class = "label">Power Saved</span>
+                    </div>
+                </div>
         </section>
         <script src="resources/jquery-2.1.1.js"></script>
         <script src="resources/progressbar.js"></script>
