--- a/arduino/WebServer/www/index.html
+++ b/arduino/WebServer/www/index.html
@@ -21,28 +21,28 @@
             </div>
 
             <div class="content">
-                <header><span id="content">Loading...</span>°C</header>
+                <header id="temp">loading...</header>
             </div>
         </section>
         <section id="stats" class="full-window">
                 <div class="box">
                     <div class="text">
-                        <header id ="timestamp">Loading...</header><span class = "label">Last Transmission</span>
+                        <header id ="timestamp">loading...</header><span class = "label">Last Transmission</span>
                     </div>
                 </div><!-- 
              --><div class="box">
                     <div class="text">
-                        <header>n/a</header><span class = "label">Total Samples</span>
+                        <header id = "tx">loading...</header><span class = "label">Transmission Ratio</span>
                     </div>
                 </div><!--
              --><div class="box">
                     <div class="text">
-                        <header>n/a</header><span class = "label">Transmission Percentage</span>
+                        <header id = "dist">loading...</header><span class = "label">Distortion</span>
                     </div>
                 </div><!--
              --><div class="box">
                     <div class="text">
-                        <header>n/a</header><span class = "label">Power Saved</span>
+                        <header id ="power">loading...</header><span class = "label">Power Saved</span>
                     </div>
                 </div>
         </section>
